<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register.Register">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/bg_register_shape"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/logo_login"
                android:src="@drawable/logo_2" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/splash_name"
                    android:textColor="@color/Color_2"
                    android:textSize="29sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/register_screen_txt"
                    android:textColor="@color/Color_2"
                    android:textSize="27sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_register_shape_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="27dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="21dp"
                    android:hint="@string/email_login"
                    android:textColorHint="@color/Color_2"
                    app:boxCornerRadiusBottomEnd="11dp"
                    app:boxCornerRadiusBottomStart="11dp"
                    app:boxCornerRadiusTopEnd="11dp"
                    app:boxCornerRadiusTopStart="11dp"
                    app:boxStrokeColor="@color/Color_2"
                    app:endIconMode="clear_text">

                    <EditText
                        android:id="@+id/emailET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="7dp"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/Color_2"
                        android:textSize="15sp"
                        tools:ignore="LabelFor,TextFields,SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:hint="@string/nama_lengkap_register"
                    android:textColorHint="@color/Color_2"
                    app:boxCornerRadiusBottomEnd="11dp"
                    app:boxCornerRadiusBottomStart="11dp"
                    app:boxCornerRadiusTopEnd="11dp"
                    app:boxCornerRadiusTopStart="11dp"
                    app:boxStrokeColor="@color/Color_2"
                    app:endIconMode="clear_text">

                    <EditText
                        android:id="@+id/nama_lengkapET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="7dp"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/Color_2"
                        android:textSize="15sp"
                        tools:ignore="LabelFor,TextFields,SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:hint="@string/nim_register"
                    app:counterEnabled="true"
                    app:counterMaxLength="12"
                    app:counterTextColor="@color/Color_2"
                    android:textColorHint="@color/Color_2"
                    app:boxCornerRadiusBottomEnd="11dp"
                    app:boxCornerRadiusBottomStart="11dp"
                    app:boxCornerRadiusTopEnd="11dp"
                    app:boxCornerRadiusTopStart="11dp"
                    app:boxStrokeColor="@color/Color_2"
                    app:endIconMode="clear_text">

                    <EditText
                        android:id="@+id/nimET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="7dp"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLines="1"
                        android:maxLength="12"
                        android:textColor="@color/Color_2"
                        android:textSize="15sp"
                        tools:ignore="LabelFor,TextFields,SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:hint="@string/jurusan_register"
                    android:textColorHint="@color/Color_2"
                    app:boxCornerRadiusBottomEnd="11dp"
                    app:boxCornerRadiusBottomStart="11dp"
                    app:boxCornerRadiusTopEnd="11dp"
                    app:boxCornerRadiusTopStart="11dp"
                    app:boxStrokeColor="@color/Color_2"
                    app:endIconMode="clear_text">

                    <EditText
                        android:id="@+id/jurusanET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="7dp"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/Color_2"
                        android:textSize="15sp"
                        tools:ignore="LabelFor,TextFields,SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_pass"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:hint="@string/password_login"
                    android:textColorHint="@color/Color_2"
                    app:boxCornerRadiusBottomEnd="11dp"
                    app:boxCornerRadiusBottomStart="11dp"
                    app:boxCornerRadiusTopEnd="11dp"
                    app:boxCornerRadiusTopStart="11dp"
                    app:boxStrokeColor="@color/Color_2"
                    app:errorEnabled="true"
                    app:helperText="Minimum 6 Char"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/Color_2"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/Color_2">

                    <EditText
                        android:id="@+id/passwordET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/lock_pass"
                        android:drawablePadding="7dp"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/Color_2"
                        android:textSize="15sp"
                        tools:ignore="LabelFor,TextFields,SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="47dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/back_btn"
                    android:layout_width="99dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="22dp"
                    android:background="@drawable/button_back_reg"
                    android:contentDescription="@string/ilus_txt"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/btn_register_proses"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/button_shape_2"
                    android:text="@string/proses_btn"
                    android:textColor="@color/Color_1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>